--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL="mongodb://0.0.0.0:27017/chat"
+MONGO_URL=mongodb+srv://umairtariq403:1234@demandordergenerator.swgyxwz.mongodb.net/?retryWrites=true&w=majority
