--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
-    "build":"./node_modules/.bin/netlify-lambda build src"
+    "build":"netlify delpoy --prod"
   },
   "author": "",
   "license": "ISC",
