--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
-    "build":"netlify delpoy --prod"
+    "build": "netlify delpoy --prod"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
+    "netlify-cli": "^15.9.1",
     "netlify-lambda": "^2.0.16",
     "nodemon": "^3.0.1",
     "serverless-http": "^3.2.0",
