--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js",
-    "build": "netlify delpoy --prod"
+    "start": "node index.js"
+    
   },
   "author": "",
   "license": "ISC",
